		VCD or FST loader.
		Fix for do_initial_zoom_fit when file requester used.
		Changed contact address for bug reports.
		Enable mouseover for MinGW.
		Added fstWriterSetParallelMode().
3.3.36	04may12	Fixed destructive string convert in fstUtilityBinToEsc().
		Added support for 01xzhuwl- in fst.c callback interface,
		vcd2fst.c, and lxt.c.
		Added adaptive buffer resizing in FST writer for Linux
		and Mac OSX.
		Fix for realpath() 2nd argument NULL on Leopard.
		Fix for doubles stored in HistEnt fields in ghw
		introduced in 3.3.19.
3.3.37	10jun12	Added patch for savefile.c that corrects an issue in which the
		parser for process filter lines assumed the associated id
		number was always a single digit. 
		Added patch to bitvec.c catches one more case when locating
		bitblasted signals in vcd files created by modelsim. 
		Fix that kills stray pipeio_create() processes on
		pipeio_destroy().
		Additions to extload to handle hier types, component types,
		and signal types.
		Added support for extload files as input filetype in vcd2fst.
		Added -o for extload files to convert to FST.
3.3.38	10jul12	Upgrading vermin parser to handle some > 1995 constructs.
		Propagate -o option into "Open New Window" menu option.
		Change invert function so it does not incorrectly expand into
		the whole nybble when it is < 4 bits. That is, inverting the
		two bit quantity 10 now displays as 0x1, not 0xD.
		Added fstminer.
		MinGW warnings fixes.
		Fixed relative pathnames for gtkw save files in MinGW.
		Fix fstapi reader so it does not leave stray hier tmpfiles
		around in MinGW if reader is never closed.
		Changed twinwave for MinGW so that it does not target two
		panes in a single window.  Something is apparently now
		broken in the GtkSocket/GtkPlug implementation for Win32.
3.3.39	17jul12	Fixed relative pathnames when generated in MinGW and used
		back on Linux.
		Added --output filename option to fst2vcd, vzt2vcd, and 
		lxt2vcd.